Optimized the about page for halloween mode

--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,7 @@
     <!--
     <img class="logo" src="images/weblogo.png" width="80" height="74">
   -->
-    <a id = "ham-a" class = "ham-a" role="button" onclick="showSidebar()"><img src="../images/Hamburger_icon.png" class="ham"></a>
+    <a id = "ham-a" class = "ham-a" role="button" onclick="showSidebar()"><img src="../images/Hamburger_icon.png" class="ham" id = "ham-switch"></a>
     <a class="ng-logo-a" role="button" onclick="showNGBanner()">
       <img src="../images/National_Guard_Logo.png" class = "ng-logo">
     </a>
