Changed the bulliten board for fall break

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <br>
         Click to solve Wednesday's puzzle: <a href="puzzle" target = "_blank">Puzzle</a>
         <br>
-        2 Days until Fall Break!
+        Have a relaxing Fall Break!
       </p>
     </div>
 
