--- a/Calendar/OctoberCalendar.html
+++ b/Calendar/OctoberCalendar.html
@@ -31,7 +31,7 @@
           <div class="dropdown" style="float:right;">
             <button onclick="dropDown()" class="dropbtn">Change Month</button>
             <div id="myDropdown" class="dropdown-content">
-              <a href="CurrentCalendar.html">September</a>
+              <a href="index.html">September</a>
               <a href="OctoberCalendar.html">October</a>
               <a href="NovemberCalendar.html">November</a>
               <a href="DecemberCalendar.html">December</a>
