--- a/Calendar/DecemberCalendar.html
+++ b/Calendar/DecemberCalendar.html
@@ -81,7 +81,7 @@
           <div class="dropdown" style="float:right;">
             <button onclick="dropDown()" class="dropbtn">Change Month</button>
             <div id="myDropdown" class="dropdown-content">
-              <a href="CurrentCalendar.html">October</a>
+              <a href="index.html">October</a>
               <a href="NovemberCalendar.html">November</a>
               <a href="DecemberCalendar.html">December</a>
            </div>
