fixed lines and header on portrait mode of calendar

--- a/Calendar/NovemberCalendar.html
+++ b/Calendar/NovemberCalendar.html
@@ -12,7 +12,7 @@
 
     <!-- dycalendarjs stylesheet -->
     <link href="css/dycalendar.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="../css/FHSched_V_1.15a.css">
+    <link rel="stylesheet" href="../css/FHSched_V_1.15.css">
     <link rel="stylesheet" href="../css/Dark_Mode_1.0.css">
     <link rel = "stylesheet" href = "css/FHSchedCalendar_V_1.11.css">
     <script type="text/javascript" src="../js/FHSched_Base_V_1.7.js"></script>
@@ -175,65 +175,64 @@
         </div>
 
         <div class="picture0">
-        <img src="calendar-line-horizontal.png" alt="calendar" width="925" height="500">
+        <img src="calendar-line-horizontal.png" alt="calendar" width="1130" height="500">
         </div>
 
         <div class="picture1">
-        <img src="calendar-line-horizontal.png" alt="calendar" width="925" height="500">
+        <img src="calendar-line-horizontal.png" alt="calendar" width="1130" height="500">
         </div>
 
         <div class="picture2">
-        <img src="calendar-line-horizontal.png" alt="calendar" width="925" height="500">
+        <img src="calendar-line-horizontal.png" alt="calendar" width="1130" height="500">
         </div>
 
          <div class="picture3">
-        <img src="calendar-line-horizontal.png" alt="calendar" width="925" height="500">
+        <img src="calendar-line-horizontal.png" alt="calendar" width="1130" height="500">
         </div>
 
         <div class="picture4">
-        <img src="calendar-line-horizontal.png" alt="calendar" width="925" height="500">
+        <img src="calendar-line-horizontal.png" alt="calendar" width="1130" height="500">
         </div>
 
         <div class="picture5">
-        <img src="calendar-line-horizontal.png" alt="calendar" width="925" height="500">
+        <img src="calendar-line-horizontal.png" alt="calendar" width="1130" height="500">
         </div>
 
         <div class="picture6">
-        <img src="calendar-line-horizontal.png" alt="calendar" width="925" height="500">
+        <img src="calendar-line-horizontal.png" alt="calendar" width="1130" height="500">
         </div>
 
         <div class="picture7">
-        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1195">
+        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1495">
         </div>
 
         <div class="picture8">
-        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1195">
+        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1495">
         </div>
 
         <div class="picture9">
-        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1195">
+        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1495">
         </div>
 
         <div class="picture10">
-        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1195">
+        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1495">
         </div>
 
         <div class="picture11">
-        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1195">
+        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1495">
         </div>
 
         <div class="picture12">
-        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1195">
+        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1495">
         </div>
 
         <div class="picture13">
-        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1195">
+        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1495">
         </div>
 
         <div class="picture14">
-        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1195">
+        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1495">
         </div>
-
         <div class="eventContainerThirtyTwo"> </div>
         <div class="eventContainerThirtyThree"> </div>
         <div class="eventContainerThirtyFour"> </div>
