even more calendar updates

--- a/Calendar/ClubCurrentCalendar.html
+++ b/Calendar/ClubCurrentCalendar.html
@@ -12,7 +12,7 @@
 
     <!-- dycalendarjs stylesheet -->
     <link href="css/dycalendar.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="../css/FHSched_V_1.15a.css">
+    <link rel="stylesheet" href="../css/FHSched_V_1.15.css">
     <link rel="stylesheet" href="../css/Dark_Mode_1.0.css">
     <link rel = "stylesheet" href = "css/FHSchedCalendar_V_1.11.css">
     <script type="text/javascript" src="../js/FHSched_Base_V_1.7.js"></script>
@@ -80,7 +80,7 @@
           <div class="dropdown" style="float:right;">
             <button onclick="dropDown()" class="dropbtn">Major Events</button>
             <div id="myDropdown" class="dropdown-content">
-              <a href="CurrentCalendar.html">October</a>
+              <a href="index.html">October</a>
               <a href="NovemberCalendar.html">November</a>
               <a href="DecemberCalendar.html">December</a>
            </div>
