--- a/Calendar/index.html
+++ b/Calendar/index.html
@@ -12,7 +12,7 @@
 
     <!-- dycalendarjs stylesheet -->
     <link href="css/dycalendar.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="../css/FHSched_V_1.15a.css">
+    <link rel="stylesheet" href="../css/FHSched_V_1.15.css">
     <link rel="stylesheet" href="../css/Dark_Mode_1.0.css">
     <link rel = "stylesheet" href = "css/FHSchedCalendar_V_1.11.css">
     <script type="text/javascript" src="../js/FHSched_Base_V_1.7.js"></script>
@@ -78,7 +78,7 @@
           <div class="dropdown" style="float:right;">
             <button onclick="dropDown()" class="dropbtn">Major Events</button>
             <div id="myDropdown" class="dropdown-content">
-              <a href="CurrentCalendar.html">October</a>
+              <a href="index.html">October</a>
               <a href="NovemberCalendar.html">November</a>
               <a href="DecemberCalendar.html">December</a>
            </div>
@@ -112,7 +112,7 @@
                 <div id="dycalendar-month" class="dycalendar-container skin-gray"></div>
         </div>
 
-        <div class="picture">
+               <div class="picture">
         <img src="calendar-line-horizontal.png" alt="calendar" width="953" height="475">
         </div>
 
@@ -173,63 +173,63 @@
         </div>
 
         <div class="picture0">
-        <img src="calendar-line-horizontal.png" alt="calendar" width="925" height="500">
+        <img src="calendar-line-horizontal.png" alt="calendar" width="1130" height="500">
         </div>
 
         <div class="picture1">
-        <img src="calendar-line-horizontal.png" alt="calendar" width="925" height="500">
+        <img src="calendar-line-horizontal.png" alt="calendar" width="1130" height="500">
         </div>
 
         <div class="picture2">
-        <img src="calendar-line-horizontal.png" alt="calendar" width="925" height="500">
+        <img src="calendar-line-horizontal.png" alt="calendar" width="1130" height="500">
         </div>
 
          <div class="picture3">
-        <img src="calendar-line-horizontal.png" alt="calendar" width="925" height="500">
+        <img src="calendar-line-horizontal.png" alt="calendar" width="1130" height="500">
         </div>
 
         <div class="picture4">
-        <img src="calendar-line-horizontal.png" alt="calendar" width="925" height="500">
+        <img src="calendar-line-horizontal.png" alt="calendar" width="1130" height="500">
         </div>
 
         <div class="picture5">
-        <img src="calendar-line-horizontal.png" alt="calendar" width="925" height="500">
+        <img src="calendar-line-horizontal.png" alt="calendar" width="1130" height="500">
         </div>
 
         <div class="picture6">
-        <img src="calendar-line-horizontal.png" alt="calendar" width="925" height="500">
+        <img src="calendar-line-horizontal.png" alt="calendar" width="1130" height="500">
         </div>
 
         <div class="picture7">
-        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1195">
+        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1495">
         </div>
 
         <div class="picture8">
-        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1195">
+        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1495">
         </div>
 
         <div class="picture9">
-        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1195">
+        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1495">
         </div>
 
         <div class="picture10">
-        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1195">
+        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1495">
         </div>
 
         <div class="picture11">
-        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1195">
+        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1495">
         </div>
 
         <div class="picture12">
-        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1195">
+        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1495">
         </div>
 
         <div class="picture13">
-        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1195">
+        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1495">
         </div>
 
         <div class="picture14">
-        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1195">
+        <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1495">
         </div>
 
         <div class="eventContainerSixteen"> </div>
