--- a/Calendar/ClubNovemberCalendar.html
+++ b/Calendar/ClubNovemberCalendar.html
@@ -12,7 +12,7 @@
 
     <!-- dycalendarjs stylesheet -->
     <link href="css/dycalendar.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="../css/FHSched_V_1.15.css">
+    <link rel="stylesheet" href="../css/FHSched_V_1.15a.css">
     <link rel="stylesheet" href="../css/Dark_Mode_1.0.css">
     <link rel = "stylesheet" href = "css/FHSchedCalendar_V_1.11.css">
     <script type="text/javascript" src="../js/FHSched_Base_V_1.7.js"></script>
@@ -234,7 +234,7 @@
         <div class="picture14">
         <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1495">
         </div>
-        
+
         <div class="eventContainerThirtyTwo"> </div>
         <div class="eventContainerThirtyThree"> </div>
         <div class="eventContainerThirtyFour"> </div>
