--- a/Calendar/NovemberCalendar.html
+++ b/Calendar/NovemberCalendar.html
@@ -91,7 +91,7 @@
         <div class="dropdown2" style="float:right;">
             <button onclick="dropDown2()" class="dropbtn2">Club Meetings</button>
             <div id="myDropdown2" class="dropdown2-content">
-              <a href="CurrentCalendar.html">October</a>
+              <a href="index.html">October</a>
               <a href="ClubNovemberCalendar.html">November</a>
               <a href="ClubDecemberCalendar.html">December</a>
            </div>
