Hopefully final calendar updates

--- a/Calendar/ClubNovemberCalendar.html
+++ b/Calendar/ClubNovemberCalendar.html
@@ -104,7 +104,7 @@
         <div class="container1"  id="yearCountDown"></div>
         <div class="container2" id="breakCountDown"></div>
         <div class = "featuredSportSplash">
-          <p> example text</p>
+          <p> If you don't see your club meetings or practices, contact us!</p>
         </div>
 
 
