--- a/Calendar/NovemberCalendar.html
+++ b/Calendar/NovemberCalendar.html
@@ -103,7 +103,7 @@
         <div class="container1"  id="yearCountDown"></div>
         <div class="container2" id="breakCountDown"></div>
         <div class = "featuredSportSplash">
-          <p> example text</p>
+          <p> If there are any events that you think should be added, contact us!</p>
         </div>
 
 
