--- a/Calendar/index.html
+++ b/Calendar/index.html
@@ -101,7 +101,7 @@
         <div class="container1"  id="yearCountDown"></div>
         <div class="container2" id="breakCountDown"></div>
         <div class = "featuredSportSplash">
-          <p> 🦃</p>
+          <p> If there are any events that you think should be added, contact us!</p>
         </div>
 
 
@@ -825,6 +825,7 @@ h
           <p>Cross Country: Varsity IHSAA Semi-State at New Haven High School (Time:TBD)</p>
           <p> Marching Band at Lucas Oil Stadium
 Bands of America Indy Super Regional Championship - FINALS (Time: TBD) </p>
+           <p> Picture Day at D Hallway at 10:00am- 5:00pm </p>
           <p> Knight Football Games at FHS Football Stadium at 1:00pm- 6:00pm </p>
         </font>
       </div>
