--- a/Calendar/ClubCurrentCalendar.html
+++ b/Calendar/ClubCurrentCalendar.html
@@ -103,7 +103,7 @@
         <div class="container1"  id="yearCountDown"></div>
         <div class="container2" id="breakCountDown"></div>
         <div class = "featuredSportSplash">
-          <p> example text</p>
+          <p> If you don't see your club meetings or practices, contact us!</p>
         </div>
 
 
@@ -253,7 +253,7 @@
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>None</p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -271,7 +271,7 @@
       </header>
       <div class="w3-container">
         <font color="black">
-        <p>None</p>
+        <p></p>
         </font>
       </div>
     </div>
@@ -289,7 +289,7 @@
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>None</p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -307,7 +307,7 @@
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>None</p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -325,7 +325,7 @@
       </header>
       <div class="w3-container">
         <font color="black">
-           <p>None</p>
+           <p></p>
         </font>
       </div>
     </div>
@@ -343,7 +343,7 @@
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>None</p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -361,7 +361,7 @@
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>None</p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -379,7 +379,7 @@
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>None</p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -397,17 +397,6 @@
       </header>
       <div class="w3-container">
         <font color="black">
-          <p> Basketball Girls at FHS Gym - Auxiliary Gym 2 at 6:15am- 7:00am </p>
-          <p>  Baseball Victory Challenge at FHS Gym - Auxiliary at 6:30am- 7:15am </p>
-          <p>  GAPP-German Exchange Meeting at LGI Room at 6:45am- 8:00am </p>
-          <p> Swimming at FHS Natatorium West at 2:50pm- 5:30pm </p>
-          <p> Basketball Boys at Fall Limited Contact Dates at FHS Gym at 3:30pm- 5:30pm </p>
-          <p> Fishers Diving Club at FHS Natatorium Diving Well at 4:00pm- 7:00pm </p>
-          <p> CRU at CCA Commons at 5:30pm- 9:00pm </p>
-          <p> Color Guard Practice at Performing Arts LGI at 6:00pm- 9:00pm </p>
-          <p> Boys Travel Basketball Practice at FHS Gym Aux Court 2 at 6:00pm- 7:30pm </p>
-          <p> Boys Travel Basketball Practice at FHS Gym Aux Court 1 at 6:15pm- 9:00pm </p>
-          <p> Baseball Dugout Club Meeting at LGI Room at 7:00pm- 8:30pm </p>
         </font>
       </div>
     </div>
@@ -425,24 +414,6 @@
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>FCA at FHS Gym at 6:45am- 7:15am</p>
-          <p>Best Buddies at Cafe A at 7:00am- 7:30am </p>
-          <p> Cheer Winter Call Out Meeting at Cafe A at 3:00pm- 4:00pm </p>
-          <p> Marching Band Practice at 3:00pm- 6:00pm </p>
-          <p> Model UN at LGI Room at 3:00pm- 4:00pm </p>
-          <p> School Improvement Team at Room H136 Project Lab at 3:00pm- 4:00pm </p>
-          <p> Basketball Girls Open Gym - Fall Limited Contact at FHS Gym - Auxiliary Gym 2 at 3:15pm- 5:15pm </p>
-          <p> Fall Play REHEARSAL at Little Theater-Black Box at 3:15pm- 5:00pm </p>
-          <p> Baseball Open Field - Fall Limited Contact Period at FHS Baseball Field at 3:30pm- 5:30pm </p>
-          <p> Cheer Fall Practice at FHS Gym Aux Court 3 at 4:00pm- 6:00pm </p>
-          <p>Basketball Girls 7th & 8th Travel Practices at FHS Gym at 6:00pm- 8:00pm </p>
-          <p>Golf Girls End of Season Banquet at Cafe A at 6:00pm- 9:00pm </p>
-          <p>Show Choir Sound Rehearsal at F117, F132 at 6:00pm- 9:00pm </p>
-          <p>Volleyball Mens Open Gym at FHS Gym - Auxiliary at 6:00pm- 8:00pm </p>
-          <p>Band Boosters Meeting at F142 at 7:00pm- 8:00pm</p>
-          <p>Baseball Fundraiser Meeting at Cafe B at 7:00pm- 8:30pm </p>
-          <p> Financial Aid Night at CCA Commons at 7:00pm- 8:30pm </p>
-          <p> Football Gridiron Meeting at LGI Room at 7:00pm- 9:00pm </p>
         </font>
       </div>
     </div>
@@ -622,7 +593,13 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-            <p></p>
+          <font color="orange">
+            <p>Fall Break</p>
+          </font>
+            <p> Soccer Boys Practice at FHS Football Stadium at 8:00am- 10:00am </p>
+            <p> Football practice at FHS Football Stadium at 10:00am- 12:00pm </p>
+            <p> Marching Band practice at 3:00pm- 6:00pm </p>
+            <p> Cheer Fall Practice at FHS Gym Aux Court 3 at 4:00pm- 6:00pm </p>
         </font>
       </div>
     </div>
@@ -640,7 +617,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p></p>
+          <p>Marching Band Practice at 9:00am- 5:00pm</p>
         </font>
       </div>
     </div>
@@ -658,7 +635,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p></p>
+          <p>Lacrosse Boys Practice at FHS Football Stadium at 1:00pm- 3:00pm</p>
         </font>
       </div>
     </div>
@@ -676,7 +653,13 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p></p>
+          <p> Coding For Fishers meeting at CCA at 2:35pm-3:35pm</p>
+          <p>Basketball Girls 1st Week of Practice / Try-Outs at FHS Gym - Auxiliary Gym 2 at 2:55pm- 6:00pm</p>
+          <p> Yearbook Work Session at Room A218 at 3:00pm- 9:00pm </p>
+          <p> Fall Play REHEARSAL at Little Theater-Black Box at 3:30pm- 5:00pm </p>
+          <p> CRU at CCA at 5:30pm- 9:00pm </p>
+          <p>Color Guard Practice at FHS Football Stadium at 6:00pm- 9:00pm </p>
+          <p> Boys Travel Basketball Practice at FHS Gym - Aux at 6:15pm- 9:00pm </p>
         </font>
       </div>
     </div>
@@ -694,7 +677,18 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p></p>
+          <p>FCA at LGI Room at 6:45am- 7:30am</p>
+          <p> Coding For Fishers meeting at CCA at 3:00pm-4:00pm</p>
+          <p> Basketball Girls 1st Week of Practice / Try-Outs at FHS Gym - Auxiliary Gym 2 at 3:00pm- 6:00pm </p>
+          <p> Cheer Winter Practice #1 for Try-outs at FHS Gym Aux Court 2 at 3:00pm- 5:00pm </p>
+          <p>Marching Band Practice at 3:00pm- 6:00pm </p>
+          <p>Model UN at LGI Room at 3:00pm- 4:00pm </p>
+          <p>Fall Play REHEARSAL at Little Theater-Black Box at 3:15pm- 5:00pm </p>
+          <p> Cheer Fall Practice at FHS Gym Aux Court 3 at 4:00pm- 6:00pm </p>
+          <p> Basketball Girls 7th & 8th Travel Practices at FHS Gym - Auxiliary Gym 2 at 6:00pm- 8:00pm </p>
+          <p> Best Buddies at Cafe A at 6:00pm- 8:00pm </p>
+          <p> Show Choir Sound Rehearsal at F117, F132 at 6:00pm- 9:00pm </p>
+          <p> Volleyball Mens Practice at FHS Gym - Aux at 6:00pm- 8:00pm </p> 
         </font>
       </div>
     </div>
@@ -712,7 +706,13 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p></p>
+          <p>Basketball Girls 1st Week of Practice / Try-Outs at FHS Gym - Auxiliary Gym 2 at 3:00pm- 6:00pm</p>
+          <p> Cheer Winter Practice #2 for Try-outs at FHS Gym Aux Court 2 and 3 at 3:00pm- 5:00pm </p>
+          <p> Marching Band Practice at 3:00pm- 6:00pm </p>
+          <p> Fall Play REHEARSAL at Little Theater-Black Box at 3:15pm- 5:00pm </p>
+          <p> Basketball Girls Player Meetings at LGI Room at 4:00pm- 6:30pm </p>
+          <p> We The People Practice at 5:00pm- 8:00pm </p>
+          <p> IB Night at Cafe B, CCA Commons at 7:00pm- 9:00pm </p>
         </font>
       </div>
     </div>
@@ -730,7 +730,17 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p></p>
+          <p>Basketball Girls Varsity Team Picture at FHS Gym - Varsity at 7:10am- 7:30am</p>
+          <p> Future Black Leaders at Room H136 at 3:00pm- 4:00pm </p>
+          <p> Drama Club at Little Theater-Black Box at 3:15pm- 4:15pm </p>
+          <p> Cheer Fall Practice at FHS Gym Aux Court 3 at 4:00pm- 6:00pm </p>
+          <p> Basketball Girls Practice at FHS Gym - Auxiliary Gym 2 at 5:00pm- 6:30pm </p>
+          <p> We The People Mudsock at 5:00pm- 9:00pm </p>
+          <p> Cheer Winter Try-Outs at FHS Gym - Varsity at 6:00pm- 8:00pm </p>
+          <p> Marching Band Practice 6:00pm- 9:00pm </p>
+          <p> Show Choir Electrum Rehearsal at F117, F132 at 6:00pm- 9:00pm </p>
+          <p> Boys Travel Basketball Practice FHS Gym - Aux at 6:15pm- 9:00pm </p>
+          <p> Basketball Girls 7th & 8th Travel Practices at FHS Gym - Auxiliary Gym 2 at 6:30pm- 8:00pm </p>
         </font>
       </div>
     </div>
@@ -748,7 +758,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p></p>
+          <p>Marching Band Practice at 3:00pm- 6:00pm</p>
         </font>
       </div>
     </div>
@@ -766,7 +776,11 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p></p>
+          <p>Baseball Field Day at 8:00am- 4:00pm</p>
+          <p> Basketball Girls Practice at FHS Gym - Aux </p>
+          <p> Marching Band Practice at 9:00am- 5:00pm </p>
+          <p> Basketball Girls Scrimmage at FHS Gym - Aux at 10:00am- 11:00am </p>
+          <p> Best Buddies Event at downstairs CCA Hallways at 12:00pm- 6:00pm </p>
         </font>
       </div>
     </div>
@@ -784,7 +798,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p></p>
+          <p>Lacrosse Boys Practice at FHS Football Stadium at 1:00pm- 3:00pm</p>
         </font>
       </div>
     </div>
@@ -802,7 +816,17 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p></p>
+          <p>Basketball Girls Non-APC Lifting at FHS Weight Room- North at 6:30am- 7:15am</p>
+          <p> Coding For Fishers meeting at CCA at 2:35pm-3:35pm</p>
+          <p> Basketball Girls Practice C - JV - V at FHS Gym - Auxiliary Gym 2 at 2:55pm- 6:00pm </p>
+          <p> Yearbook Work Session at Room A218 at 3:00pm- 9:00pm </p>
+          <p> Fall Play REHEARSAL at Little Theater-Black Box at 3:30pm- 5:00pm </p>
+          <p> Steam Team Planning Meeting at Room H136 at 3:30pm- 4:30pm </p>
+          <p> CRU at Cafe A at 4:00pm- 9:00pm </p>
+          <p> CRU at CCA Commons at 5:30pm- 9:00pm </p>
+          <p> Color Guard Practice at FHS Football Stadium at 6:00pm- 9:00pm </p>
+          <p> SPORTS - Boys Travel Basketball Practice at FHS Gym - Aux at 6:15pm- 9:00pm </p>
+          <p> TigerOne Monthly Meeting at LGI Room at 6:30pm- 9:00pm </p>
         </font>
       </div>
     </div>
@@ -820,7 +844,17 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p></p>
+          <p>FCA at LGI Room at 6:45am- 7:30am</p>
+          <p> Coding For Fishers meeting at CCA at 3:00pm-4:00pm</p>
+          <p> Marching Band Practice at 3:00pm- 6:00pm </p>
+          <p> Model UN at LGI Room at 3:00pm- 4:00pm </p>
+          <p> Basketball Girls Practice C - JV - V at FHS Gym - Auxiliary Gym 2 at 3:15pm- 6:00pm </p>
+          <p> Fall Play REHEARSAL at Little Theater-Black Box at 3:15pm- 5:00pm </p>
+          <p> Cheer Fall Practice at FHS Gym Aux Court 3 at 4:00pm- 6:00pm </p>
+          <p> All Treats No Tricks at CCA Commons at 6:00pm- 7:30pm </p>
+          <p> Basketball Girls 7th & 8th Travel Practices at FHS Gym - Auxiliary Gym 2 at 6:00pm- 8:00pm </p>
+          <p> Show Choir Sound Rehearsal at F117, F132 at 6:00pm- 9:00pm </p>
+          <p>  Volleyball Mens Practice at FHS Gym - Aux at 6:00pm- 8:00pm </p>
         </font>
       </div>
     </div>
@@ -838,7 +872,12 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p></p>
+          <p>Marching Band Practice at 3:00pm- 6:00pm</p>
+          <p> Fall Play REHEARSAL at Little Theater-Black Box at 3:15pm- 5:00pm </p>
+          <p> Callout Meeting Silver Shadows - Show Choir Season Tech Crew at 3:30pm- 4:30pm </p>
+          <p> We The People Practice at 5:00pm- 8:00pm </p>
+          <p> Tennis Boys End of Season Banquet at CCA Commons at 6:00pm- 9:00pm </p>
+          <p> Boys Travel Basketball Practice at FHS Gym - Aux at 6:15pm- 9:00pm </p>
         </font>
       </div>
     </div>
@@ -856,7 +895,15 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p></p>
+          <p>Superintendent's Advisory Council Meeting at Room H136 at 7:15am- 8:15am</p>
+          <p> Future Black Leaders at Room H136 at 3:00pm- 4:00pm </p>
+          <p> Basketball Girls Practice C - JV - V at FHS Gym - Auxiliary Gym 2 at 3:15pm- 6:00pm </p>
+          <p> Cheer Fall Practice at FHS Gym Aux Court 3
+          Practice at 4:00pm- 6:00pm </p>
+          <p> Football Team Dinner at Cafe A at 5:00pm- 8:00pm </p>
+          <p> Basketball Girls 7th & 8th Travel Practices at FHS Gym - Auxiliary Gym 2 at 6:00pm- 8:00pm </p>
+          <p> Marching Band Practice at 6:00pm- 9:00pm </p>
+          <p> Show Choir Electrum Rehearsal at F117, F132 at 6:00pm- 9:00pm </p>
         </font>
       </div>
     </div>
