New Shuttle Bus support

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="apple-touch-icon" sizes="114x114" href="images/apple-icon-114x114.png">
     <link rel="apple-touch-icon" sizes="144x144" href="images/apple-icon-144x144.png">
 
-    <script type="text/javascript" src="js/FHSched_Schedule_Data_V_1.11.js"> </script>
+    <script type="text/javascript" src="js/FHSched_Schedule_Data_V_1.12.js"> </script>
     <script type="text/javascript" src="js/FHSched_Calendar_Data_V_1.6.js"></script>
     <script type="text/javascript" src="js/FHSched_Base_V_1.7.js"></script>
 
@@ -36,7 +36,7 @@
     <!--
     <img class="logo" src="images/weblogo.png" width="80" height="74">
   -->
-    <a id = "ham-a" class = "ham-a" role="button" onclick="showSidebar()"><img src="images/Hamburger_icon.png" class="ham" id = "ham-switch"></a>
+    <a id = "ham-a" class = "ham-a" role="button" onclick="showSidebar()"><img src="images/Hamburger_icon.png" class="ham"></a>
     <a class="ng-logo-a" role="button" onclick="showNGBanner()">
       <img src="images/National_Guard_Logo.png" class = "ng-logo">
     </a>
@@ -57,6 +57,9 @@
         <!--
         <li><a href="../calendar/">Calendar</a></li>
         -->
+        <li>
+          <a role="button" onclick="shuttleBus()" id = "shuttle-bus-toggle">Shuttle Bus Off</a>
+        </li>
         <li id="add-theme">
           <a role="button" onclick="showAddTheme()" id="a-add-theme">+ Theme</a>
           <a role="button" id="input-theme">
@@ -100,15 +103,15 @@
 
     <div class="">
       <p class = "splash">
-        Thank you for bearing with rogue FHSched.
+        One more new <a role="button" onclick="showSidebar()" style = "text-decoration:none;">theme</a> this week!
         <br>
-        We may have finally tamed it...
+        Have all three new themes?
         <br>
         Ask around for previous themes!
         <br>
-        Click to solve Wednesday's puzzle: <a href="puzzle" target = "_blank">Puzzle</a>
+        Click to solve Friday's puzzle: <a href="puzzle">Puzzle</a>
         <br>
-        Have a relaxing Fall Break!
+        One more day till Fall Break!
       </p>
     </div>
 
@@ -203,8 +206,8 @@
     //Gets current time
     var today = new Date();
     var curMonth = today.getMonth();
-    var curDate = today.getDate();
-    var curHour = today.getHours();
+    var curDate = today.getDate()+8;
+    var curHour = today.getHours()-9;
     var curMin = today.getMinutes();
     var curSec = today.getSeconds();
 
@@ -212,16 +215,16 @@
     {
       today = new Date();
       curMonth = today.getMonth();
-      curDate = today.getDate();
-      curHour = today.getHours();
+      curDate = today.getDate()+8;
+      curHour = today.getHours()-9;
       curMin = today.getMinutes();
       curSec = (59 - today.getSeconds());
       curScheduleValue = calendar[curMonth][curDate - 1];
       curTotalMin = (curHour * 60) + curMin;
       currentSchedule = JSON_schedule[0][curScheduleValue];
-      if(curPeriodKey == "lunch")
+      if(curPeriodKey == "lunch" || (takeShuttleBus && periodKey == "periodSeven"))
       {
-        displayTimeLeft((currentSchedule[curPeriodKey][curLunchKey].EHours * 60) + currentSchedule[curPeriodKey][curLunchKey].EMin - curTotalMin - 1);
+        displayTimeLeft((currentSchedule[curPeriodKey][curMultiKey].EHours * 60) + currentSchedule[curPeriodKey][curMultiKey].EMin - curTotalMin - 1);
       }
       else if(curPeriodKey != null)
       {
@@ -237,7 +240,8 @@
 
     var periodDisplayKey = null;
     var curPeriodKey = null;
-    var curLunchKey = null;
+    var curMultiKey = null;
+    var takeShuttleBus = JSON.parse(localStorage.getItem('shuttleBus'));
 
     var curScheduleValue = calendar[curMonth][curDate - 1];
 
@@ -272,10 +276,16 @@
         return;
       }
 
+      if(takeShuttleBus && periodKey == "periodSeven")
+      {
+        curMultiKey = checkTimeFrame(currentSchedule["periodSeven"]);
+      }
+
       if(periodKey == "lunch")
       {
-        curLunchKey = checkTimeFrame(currentSchedule["lunch"]);
+        curMultiKey = checkTimeFrame(currentSchedule["lunch"]);
       }
+
       periodDisplayKey = periodKey;
       curPeriodKey = periodKey;
       if (Object.keys(currentSchedule).indexOf(periodKey) % 2 == 0)
@@ -328,6 +338,16 @@
         lunchDiv.setAttribute("style", "display:block");
         wrongLunchDiv.setAttribute("style", "display:none");
       }
+
+      if(localStorage.getItem('shuttleBus') == "false")
+      {
+        document.querySelector("#shuttle-bus-toggle").textContent = "Shuttle Bus Off";
+      }
+      else
+      {
+        document.querySelector("#shuttle-bus-toggle").textContent = "Shuttle Bus On";
+      }
+
       switch (lunchType)
       {
         case "a":
@@ -401,10 +421,10 @@
     //Displays the input time on the timer element
     function displayPeriod()
     {
-      if(curPeriodKey == "lunch" && periodDisplayKey == "lunch")
+      if((curPeriodKey == "lunch" && periodDisplayKey == "lunch") || (takeShuttleBus && periodDisplayKey == "periodSeven"))
       {
-        var periodDisplay = currentSchedule[periodDisplayKey][curLunchKey];
-        periodDisplayName = curLunchKey;
+        var periodDisplay = currentSchedule[periodDisplayKey][curMultiKey];
+        periodDisplayName = curMultiKey;
       }
       else
       {
@@ -503,8 +523,20 @@
         case "periodSeven":
           period.textContent = "Period 7"
           break;
+        case "passingPeriodSeven":
+          period.textContent = "Passing Period"
+          break;
+        case "shuttleBus":
+          period.textContent = "Period 7 (Shuttle Bus)"
+          break;
+        case "afterShuttle":
+          period.textContent = "Period 7 (After Shuttle)"
+          break;
         case "periodSevenExam":
           period.textContent = "Period 7 Exam"
+          break;
+        case "PLC":
+          period.textContent = "PLC"
           break;
         case "periodLunch":
           period.textContent = "Closed for Lunch"
