match the updated version on the site

--- a/css/index.html
+++ b/css/index.html
@@ -5,7 +5,7 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145890894-1"></script>
 
     <meta charset="utf-8">
-    <title>Page Not Found</title>
+    <title>Forbidden</title>
     <link rel="shortcut icon" type="image/ico" href="../images/icon.ico">
     <link rel="apple-touch-icon" sizes="57x57" href="../images/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="72x72" href="../images/apple-icon-72x72.png">
@@ -17,8 +17,8 @@
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
   </head>
   <body>
-    <h1>404</h1>
-    <h2>Page Not Found</h2>
+    <h1>403</h1>
+    <h2>YOU SHALL NOT PASS!</h2>
     <a href="../">Home</a>
   </body>
 </html>
