corrected the code for leafs accordingly

--- a/fall_animation/falling_leavesIndex.html
+++ b/fall_animation/falling_leavesIndex.html
@@ -9,34 +9,34 @@
       <section>
         <h2>timer here?</h2>
             <div class="set">
-                <div><img src= "leaf1.png"></div>
-                <div><img src= "leaf2.png"></div>
-                <div><img src= "leaf3.png"></div>
-                <div><img src= "leaf4.png"></div>
-                <div><img src= "leaf1.png"></div>
-                <div><img src= "leaf2.png"></div>
-                <div><img src= "leaf3.png"></div>
-                <div><img src= "leaf4.png"></div>
+                <div><img src= "../images/leaf1.png"></div>
+                <div><img src= "../images/leaf2.png"></div>
+                <div><img src= "../images/leaf3.png"></div>
+                <div><img src= "../images/leaf4.png"></div>
+                <div><img src= "../images/leaf1.png"></div>
+                <div><img src= "../images/leaf2.png"></div>
+                <div><img src= "../images/leaf3.png"></div>
+                <div><img src= "../images/leaf4.png"></div>
             </div>
             <div class="set set2">
-                <div><img src= "leaf1.png"></div>
-                <div><img src= "leaf2.png"></div>
-                <div><img src= "leaf3.png"></div>
-                <div><img src= "leaf4.png"></div>
-                <div><img src= "leaf1.png"></div>
-                <div><img src= "leaf2.png"></div>
-                <div><img src= "leaf3.png"></div>
-                <div><img src= "leaf4.png"></div>
+                <div><img src= "../images/leaf1.png"></div>
+                <div><img src= "../images/leaf2.png"></div>
+                <div><img src= "../images/leaf3.png"></div>
+                <div><img src= "../images/leaf4.png"></div>
+                <div><img src= "../images/leaf1.png"></div>
+                <div><img src= "../images/leaf2.png"></div>
+                <div><img src= "../images/leaf3.png"></div>
+                <div><img src= "../images/leaf4.png"></div>
             </div>
             <div class="set set3">
-                <div><img src= "leaf1.png"></div>
-                <div><img src= "leaf2.png"></div>
-                <div><img src= "leaf3.png"></div>
-                <div><img src= "leaf4.png"></div>
-                <div><img src= "leaf1.png"></div>
-                <div><img src= "leaf2.png"></div>
-                <div><img src= "leaf3.png"></div>
-                <div><img src= "leaf4.png"></div>
+                <div><img src= "../images/leaf1.png"></div>
+                <div><img src= "../images/leaf2.png"></div>
+                <div><img src= "../images/leaf3.png"></div>
+                <div><img src= "../images/leaf4.png"></div>
+                <div><img src= "../images/leaf1.png"></div>
+                <div><img src= "../images/leaf2.png"></div>
+                <div><img src= "../images/leaf3.png"></div>
+                <div><img src= "../images/leaf4.png"></div>
             </div>
       </section>
   </body>
