--- a/about/index.html
+++ b/about/index.html
@@ -13,7 +13,7 @@
 
     <script type="text/javascript" src="../js/FHSched_Base_V_1.7.js"></script>
 
-    <link rel="stylesheet" href="../css/FHSched_V_1.15.css">
+    <link rel="stylesheet" href="../css/FHSched_V_1.16.css">
     <link rel="stylesheet" href="../css/About_1.0.css">
     <link rel="stylesheet" href="../css/Dark_Mode_1.0.css">
 
@@ -25,7 +25,7 @@
     <!--
     <img class="logo" src="images/weblogo.png" width="80" height="74">
   -->
-    <a id = "ham-a" class = "ham-a" role="button" onclick="showSidebar()"><img src="../images/Hamburger_icon.png" class="ham" id = "ham-switch"></a>
+    <a id = "ham-a" class = "ham-a" role="button" onclick="showSidebar()"><img src="../images/Hamburger_icon.png" class="ham"></a>
     <a class="ng-logo-a" role="button" onclick="showNGBanner()">
       <img src="../images/National_Guard_Logo.png" class = "ng-logo">
     </a>
