--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <li><a href="privacy-policy/">Privacy Policy</a></li>
         </ul>
         <ul>
-          <li>2019 CodingForFishers</li>
+          <li>&copy; 2019 CodingForFishers</li>
           <li>Version 1.5.0</li>
         </ul>
         <ul>
