--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" sizes="114x114" href="../images/apple-icon-114x114.png">
     <link rel="apple-touch-icon" sizes="144x144" href="../images/apple-icon-144x144.png">
 
-    <link rel="stylesheet" href="../css/Puzzle_1.1.css">
+    <link rel="stylesheet" href="../css/Puzzle_1.3.css">
 
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
   </head>
@@ -25,20 +25,18 @@
         <br>
         Solving the puzzle or asking around school
       </p>
+      <!--
       <div class="puzzle">
+
         <p class="p-puzzle">
-          All
-          <br>
-          Qualified
-          <br>
-          Umbrellas
-          <br>
-          Assemble
+          May Stone
         </p>
-        <!--
-        <img src="../images/Theme_Puzzle.jpg">
-        -->
+
+
+
       </div>
+      -->
+      <img src="../images/Theme_Puzzle2.jpg">
       <a href="../">Home</a>
     </div>
   </body>
