Calendar Header and Footer... for the third time
This puts the footer at the very bottom for desktop landscape mode, and makes the header leave no white space on the right hand side for Iphones.

--- a/Calendar/index.html
+++ b/Calendar/index.html
@@ -986,7 +986,7 @@ Event
 -->
 
 
-<p class="bottom-space"  style="height: 800px"></p>
+<p class="bottom-space"></p>
     <footer>
       <div class="foot">
         <ul>
