New puzzle, updated index

--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" sizes="114x114" href="../images/apple-icon-114x114.png">
     <link rel="apple-touch-icon" sizes="144x144" href="../images/apple-icon-144x144.png">
 
-    <link rel="stylesheet" href="../css/Puzzle_1.3.css">
+    <link rel="stylesheet" href="../css/Puzzle_1.5.css">
 
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
   </head>
@@ -27,16 +27,19 @@
       </p>
       <!--
       <div class="puzzle">
-
         <p class="p-puzzle">
-          May Stone
+          <span>3d<sub>2</sub></span><span>&nbsp;4s<sub>2</sub></span>
         </p>
-
-
-
       </div>
       -->
-      <img src="../images/Theme_Puzzle2.jpg">
+      <img src="../images/Theme_Puzzle3.jpg">
+
+      <p class = "instructions">
+        Solve to get 2 letters.
+        <br>
+        Keep track of all letters for Friday!
+      </p>
+
       <a href="../">Home</a>
     </div>
   </body>
