--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <link rel="apple-touch-icon" sizes="144x144" href="images/apple-icon-144x144.png">
 
     <script type="text/javascript" src="js/FHSched_Schedule_Data_V_1.13.js"> </script>
-    <script type="text/javascript" src="js/FHSched_Calendar_Data_V_1.7.js"></script>
+    <script type="text/javascript" src="js/FHSched_Calendar_Data_V_1.8.js"></script>
     <script type="text/javascript" src="js/FHSched_Base_V_1.8.js"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <link rel="stylesheet" href="css/FHSched_V_1.16.css">
-    <link rel="stylesheet" href="css/Home_1.1.css">
+    <link rel="stylesheet" href="css/Home_1.2.css">
     <link rel="stylesheet" href="css/Dark_Mode_1.0.css">
   </head>
   <body onload="createThemes()" id="body" class = "dark">
@@ -104,15 +104,17 @@
 
     <div class="">
       <p class = "splash">
-        Welcome back! New <a role="button" onclick="showSidebar()" style = "text-decoration:none;">theme</a> as promised.
+        Stay updated for the next 2 days!
         <br>
-        Calendar coming very soon.
+        Each day solve for 2 scrambled letters.
         <br>
-        This time we mean it.
+        Collect all letters from Tuesday to Friday.
         <br>
-        Click to solve this week's puzzle: <a href="puzzle">Puzzle</a>
+        Unscramble for the <a role="button" onclick="showSidebar()" style = "text-decoration:none;">theme</a>, available Friday.
         <br>
-        Hint: "osaurus" = "anography"
+        Click to solve Part 3: <a href="puzzle">Puzzle</a>
+        <br>
+        Keep track of the letters!
       </p>
     </div>
 
@@ -130,7 +132,7 @@
         </ul>
         <ul>
           <li>2019 CodingForFishers</li>
-          <li>Version 1.5.0</li>
+          <li>Version 1.5.1</li>
         </ul>
         <ul>
           <li>
@@ -386,23 +388,40 @@
     }
 
     //Displays the time left in the period
-    function displayTimeLeft(minsLeft) {
-      if (curPeriodKey == null) {
-        remainingTime.textContent = "School begins at 7:35";
-        periodCountdown.textContent = "";
-      } else if (minsLeft < 0) {
-        checkCurPeriod();
-      } else {
-        var hours = Math.floor(minsLeft / 60);
-        var minutes = minsLeft % 60;
-        var seconds = curSec;
-        hours = hours == 0 ? "" : hours == 1 ? "1 hour " : hours + " hours ";
-        minutes = minutes == 0 && hours == "" ? "" : minutes == 1 ? "1 minute " : minutes + " minutes ";
-        seconds = seconds == 1 ? "1 second" : seconds + " seconds";
-        if (remainingTime.textContent != hours + minutes + seconds) {
-          remainingTime.textContent = hours + minutes + seconds;
+    function displayTimeLeft(minsLeft)
+    {
+      if (minsLeft == 1)
+      {
+        if (curSec == 1)
+        {
+          remainingTime.textContent = "" + minsLeft + " minute " + curSec + " second";
+        }
+        else
+        {
+          remainingTime.textContent = "" + minsLeft + " minute " + curSec + " seconds";
         }
         periodCountdown.textContent = "Period Countdown:";
+      }
+      else
+      {
+        if (curSec == 1)
+        {
+          remainingTime.textContent = "" + minsLeft + " minutes " + curSec + " second";
+        }
+        else
+        {
+          remainingTime.textContent = "" + minsLeft + " minutes " + curSec + " seconds";
+        }
+        periodCountdown.textContent = "Period Countdown:";
+      }
+      if (minsLeft < 0)
+      {
+        checkCurPeriod();
+      }
+      if (curPeriodKey == null)
+      {
+        remainingTime.textContent = "School begins at 7:35";
+        periodCountdown.textContent = "";
       }
       requestAnimationFrame(updateClock);
     }
