Scroll bar for sidebar and outside click close.

--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -32,12 +32,12 @@
         </p>
       </div>
       -->
-      <img src="../images/Theme_Puzzle3.jpg">
+      <img src="../images/Theme_Puzzle4.png">
 
       <p class = "instructions">
-        Solve to get 2 letters.
+        Hint: Halloween, Scary, Candy, Trick, Treat, Ghost, Afraid
         <br>
-        Keep track of all letters for Friday!
+        Find the last 2 letters and unscramble all 8 letters!
       </p>
 
       <a href="../">Home</a>
